fix: labels and heading spacing/alignment

--- a/src/components/core/rank-label/rank-label.scss
+++ b/src/components/core/rank-label/rank-label.scss
@@ -1,5 +1,5 @@
 .rank-label {
-  display: inline;
+  display: inline-block;
   font-weight: bold;
   font-size: 1.2rem;
   border-radius: .5rem;
