--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -98,7 +98,7 @@
 
     .rating-item {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         //gap: 1rem;
         // overflow-wrap: nowrap;
 
